--------------------------------------------------------------
English DoliDroid ChangeLog
--------------------------------------------------------------

***** ChangeLog for 2.2 *****

2.249
- Fix null pointer when clearing predefined URLs.
- Removed a depreated method

2.248
- Use the native masterkeystore of Android for preferences encryption.
- Fix native menu entry "Clear all predefined Urls" not working when used once logged on an instance.
- Clean code on the "About page"

2.247
- External links are now opened into the default web browser
- Add menu entry "Copy URL into clipboard"
- Clink on a link "mailto" autofill data into the email.

2.246
- Better management of cache and back to page. No error on menu pages if not logged.
- Removed deprecated code of CookieSyncManager.
- Support the camera capture on input file of type accept (whatever is its value, not only "image/*")
- Support for multiple file submission.
- Clean code

2.244
- Https is now the default scheme for url without http(s)
- Add warning if you are not using a HTTPS web site.
- Fix download for some http web site protected with HTTP Basic.
- Fix troubles when there is a = or : into the password.
- Sort the list of past URL.

2.243
- Use checkboxes to select options.
- Add support for the bookmarks pages into DoliDroid menu (need Dolibarr v15+).
- Add support for the switch company page menu (need Dolibarr v15+).
- Url entry is not lost when leaving and going back on app.
- Can click on links into the About page.
- Can delete a saved predefined URL to connect to from list of saved URLs.


***** ChangeLog for 2.1 *****

2.141
- Disable cache for the quick search page because it is not compatible with CSRF protection
- Include static resources for v12


***** ChangeLog for 2.0 *****

2.039
- FIX a not null exception if url is null

2.037-2.0.38
- FIX Hang during access on menu.

2.036
- FIX Hang on some Android 8+ when downloading
- Restore ability to use with test sites (http)

2.035